--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,7 @@ html, body {
   img {
     display: block;
     margin: auto;
-    width: 70%;
+    width: 50%;
   }
   
   #wrapper {
@@ -44,8 +44,10 @@ html, body {
     margin-top: 30px;
     width: 100%;
     height: 40px;
-    border: 1px solid #D9D9D9;
+    border: 2px solid #c4c4c4;
     padding: 0 10px;
+    border-radius: 25px;
+    box-shadow: 2px 2px 4px rgba(199, 199, 199, 0.61);
   }
   
   input#search-box:focus {
@@ -122,14 +124,6 @@ html, body {
     opacity: 0.55;
   }
   
-  #notifications {
-    width: 20px;
-    height: 20px;
-    background-color: rgba(0, 0, 0, 0.55);
-    background-position: -194px -21px;
-    border-radius: 50%;
-  }
-  
   #apps:hover {
     opacity: 1;
   }
@@ -174,7 +168,7 @@ html, body {
   }
   
   #footer li a {
-    color: #666;
+    color: #646464;
   }
   
   #footer-left {
